--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
   <!-- Value Points Section -->
   <div class="grid gap-6 mt-6 md:grid-cols-3 max-w-6xl mx-auto px-4">
     <div class="text-gray-600 dark:text-gray-300 text-sm md:text-base">
-      <div class="text-2xl mb-2">📌</div>
+      <div class="text-2xl mb-2"></div>
       <p>No business is too small for the web. A modern website builds trust, runs 24/7, and turns visitors into customers.</p>
     </div>
     <div class="text-gray-600 dark:text-gray-300 text-sm md:text-base">
-      <div class="text-2xl mb-2">💡</div>
+      <div class="text-2xl mb-2"></div>
       <p>We design structured networks that stay organized, monitored, and ready — no more guesswork when things break.</p>
     </div>
     <div class="text-gray-600 dark:text-gray-300 text-sm md:text-base">
-      <div class="text-2xl mb-2">🎨</div>
+      <div class="text-2xl mb-2"></div>
       <p>Your brand deserves attention. Our bold, clean designs make flyers, posts, and banners impossible to ignore.</p>
     </div>
   </div>
