--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@
                                 <div class="faq-answer-content">
                                     <p>Project timelines vary based on complexity, but here's our typical schedule:</p>
                                     <ul style="padding-left: 20px; margin: 15px 0;">
-                                        <li><strong>Basic websites</strong>: 2-3 weeks</li>
+                                        <li><strong>Basic websites</strong>: 1-2 weeks</li>
                                         <li><strong>E-commerce sites</strong>: 4-6 weeks</li>
                                         <li><strong>Custom web applications</strong>: 6-12 weeks</li>
                                     </ul>
@@ -216,7 +216,7 @@
                                         <li><strong>Premium Support</strong>: KES 8,000/month (includes content updates, performance optimization)</li>
                                         <li><strong>Enterprise Support</strong>: Custom packages for large businesses</li>
                                     </ul>
-                                    <p>All projects come with 30 days of free support after launch.</p>
+                                    <p>All projects come with 30 - 60 days (depends on the project/website type) of free support after launch.</p>
                                 </div>
                             </div>
                         </div>
@@ -254,9 +254,7 @@
                 <ul class="footer-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
