--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sonny Sayi Solutions | IT Services & Digital Solutions</title>
+    <meta name="description" content="We provide professional web development, graphic design, and network infrastructure services in Kenya. Build your online presence today.">
+    <meta name="keywords" content="Web Design, Graphic Design, IT Consultancy, Networking, Nairobi, Kenya">
+    <meta name="author" content="Sonny Sayi Solutions">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -210,7 +212,7 @@
                         </div>
                     </div>
                     <div class="faq-answer">
-                        <p>The timeline varies based on complexity. A basic website typically takes 2-3 weeks, while e-commerce sites may take 4-6 weeks. We work efficiently to deliver quality results while respecting your timeline.</p>
+                        <p>The timeline varies based on complexity. A basic website typically takes 1-2 weeks, while e-commerce sites may take 4-6 weeks. We work efficiently to deliver quality results while respecting your timeline.</p>
                     </div>
                 </div>
                 <div class="faq-item fade-in">
@@ -353,12 +355,10 @@
             <div class="footer-column">
                 <h3>Quick Links</h3>
                 <ul class="footer-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#faq">FAQ</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="service.html">Services</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-column">
