--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@
                             <span class="portfolio-tag">Legal</span>
                             <span class="portfolio-tag">Consultation</span>
                         </div> -->
-                        <a href="http://madarakadentalcentre.co.ke/" class="portfolio-link">View Live Site <i class="fas fa-external-link-alt"></i></a>
+                        <a href="http://madarakadentalcentre.co.ke/" target="_blank" class="portfolio-link">View Live Site <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
 
@@ -126,7 +126,7 @@
                             <span class="portfolio-tag">Legal</span>
                             <span class="portfolio-tag">Consultation</span>
                         </div> -->
-                        <a href="https://ssayi91.github.io/Motorbike-dealer-2/index.html" class="portfolio-link">View Live Site <i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://ssayi91.github.io/Motorbike-dealer-2/index.html" target="_blank" class="portfolio-link">View Live Site <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
 
@@ -141,7 +141,7 @@
                             <span class="portfolio-tag">Legal</span>
                             <span class="portfolio-tag">Consultation</span>
                         </div> -->
-                        <a href="/home/sonny/Pictures/Screenshots/property.png" class="portfolio-link">View Live Site <i class="fas fa-external-link-alt"></i></a>
+                        <a href="/home/sonny/Pictures/Screenshots/property.png" target="_blank" class="portfolio-link">View Live Site <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
@@ -380,9 +380,7 @@
                 <ul class="footer-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
