--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="w7OGhPIfhzv2-S4UGi4BEAJCbf3hyNGBImy-l1Pubmc" />
     <meta name="description" content="We provide professional web development, graphic design, and network infrastructure services in Kenya. Build your online presence today.">
     <meta name="keywords" content="Web Design, Graphic Design, IT Consultancy, Networking, Nairobi, Kenya">
     <meta name="author" content="Sonny Sayi Solutions">
