--- a/index.html
+++ b/index.html
@@ -6,10 +6,35 @@
     <meta name="google-site-verification" content="w7OGhPIfhzv2-S4UGi4BEAJCbf3hyNGBImy-l1Pubmc" />
     <meta name="description" content="We provide professional web development, graphic design, and network infrastructure services in Kenya. Build your online presence today.">
     <meta name="keywords" content="Web Design, Graphic Design, IT Consultancy, Networking, Nairobi, Kenya">
+    <meta name="keywords" content="Sonny Sayi I.T. Solutions | Website Design, IT & Branding in Kenya">
     <meta name="author" content="Sonny Sayi Solutions">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <title>Sonny Sayi Solutions | Home</title>
+      <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Sonny Sayi I.T. Solutions",
+    "url": "https://sonnysayisolutions.co.ke",
+    "logo": "https://sonnysayisolutions.co.ke/assets/logo.png",
+    "image": "https://sonnysayisolutions.co.ke/assets/logo.png",
+    "description": "Website design, IT consultancy, branding, and social media strategy in Kenya.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "KE"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+254736194051",
+      "contactType": "customer support"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/in/sonny-sayi-160835a7/"
+    ]
+  }
+  </script>
 </head>
 <body>
     <!-- Preloader -->
@@ -42,9 +67,10 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content fade-in">
-            <h1>We Build <span>Experiences</span> That Work</h1>
+            <h1><span>Sonny Sayi Solutions</span> Builds <span>Experiences</span> That Work</h1>
             <p>Web & Graphic Design. Networking. IT Consultancy. Made to move with the future.</p>
             <p>No business is too small for the web. A modern website builds trust, runs 24/7, and turns visitors into customers.</p>
+            <p>Discover the Sonny Sayi I.T. Solutions portfolio, featuring websites, branding, and IT projects created to help businesses thrive online.</p>
             <div class="hero-btns">
                 <a href="#portfolio" class="btn">View Our Work</a>
                 <a href="#pricing" class="btn btn-outline">See Pricing</a>
