--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="w7OGhPIfhzv2-S4UGi4BEAJCbf3hyNGBImy-l1Pubmc" />
+    <meta name="description" content="We provide professional web development, graphic design, and network infrastructure services in Kenya. Build your online presence today.">
+    <meta name="keywords" content="Web Design, Graphic Design, IT Consultancy, Networking, Nairobi, Kenya">
+    <meta name="keywords" content="Sonny Sayi I.T. Solutions | Website Design, IT & Branding in Kenya">
+    <meta name="keywords" content="Our Work | Sonny Sayi I.T. Solutions Web Design & Branding Portfolio">
+    <meta name="author" content="Sonny Sayi Solutions">
     <title>Sonny Sayi Solutions | Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
