--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
                     </div>
                 </div>
                 <div class="portfolio-card fade-in">
-                    <img src="assets/booking.png" alt="QuickDrive & Fix" class="portfolio-img">
+                    <img src="assets/eyeonproperty.png" alt="Eye On Property" class="portfolio-img">
                     <div class="portfolio-overlay">
-                        <h3>QuickDrive & Fix</h3>
-                        <p>Car hire and garage service website with booking functionality.</p>
-                        <a href="https://ssayi91.github.io/Swift-Drive-Auto-care/" target="_blank" class="portfolio-link">View Project <i class="fas fa-external-link-alt"></i></a>
+                        <h3>Eye On Property</h3>
+                        <p>Real estate and Design website .</p>
+                        <a href="https://eyeonproperty.co.ke" target="_blank" class="portfolio-link">View Project <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
