--- a/portfolio.html
+++ b/portfolio.html
@@ -93,16 +93,16 @@
                 
                 <div class="portfolio-card fade-in">
                     <span class="card-badge web-badge">Website</span>
-                    <img src="assets/booking.png" alt="QuickDrive & Fix" class="portfolio-img">
+                    <img src="assets/eyeonproperty.png" alt="Eye On Property" class="portfolio-img">
                     <div class="portfolio-content">
-                        <h3>QuickDrive & Fix</h3>
-                        <p>Car hire and garage service website with booking functionality and an Admin Dashboard.</p>
+                        <h3>Eye On Property</h3>
+                        <p>Real estate and Design website.</p>
                         <!-- <div class="portfolio-tags">
                             <span class="portfolio-tag">React</span>
                             <span class="portfolio-tag">Automotive</span>
                             <span class="portfolio-tag">E-commerce</span>
                         </div> -->
-                        <a href="https://ssayi91.github.io/Swift-Drive-Auto-care/" target="_blank" class="portfolio-link">View Live Site <i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://eyeonproperty.co.ke" target="_blank" class="portfolio-link">View Live Site <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
                 
@@ -201,6 +201,15 @@
                         <div class="logo-info">
                             <h3>Sonny Sayi Solutions</h3>
                             <p>Web & Graphic Design. Networking. IT Consultancy.</p>
+                        </div>
+                    </div>
+                    <div class="logo-slide">
+                        <div class="logo-box" style="background-color: white;">
+                            <img src="assets/Eye Logo_250828_120851.jpg" style="border-radius: 5px;" alt="eyeonproperty">
+                        </div>
+                        <div class="logo-info">
+                            <h3>Eye on Property</h3>
+                            <p>Real estate and Design Company.</p>
                         </div>
                     </div>
                 </div>
@@ -355,6 +364,9 @@
                 </div>
                  <div class="client-logo fade-in">
                     <img src="assets/MDC Logo_250607_102736.jpg" alt="Client Logo">
+                </div>
+                <div class="client-logo fade-in">
+                    <img src="assets/Eye Logo_250828_120851.jpg" style="border-radius: 5px;" alt="Client Logo">
                 </div>
             </div>
         </div>
