--- a/portfolio.html
+++ b/portfolio.html
@@ -407,7 +407,7 @@
                 <ul class="footer-links">
                     <li><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya</li>
                     <li><i class="fab fa-whatsapp"></i> +254 736 194051</li>
-                    <li><i class="fas fa-envelope"></i> sonny.sayi@gmail.com</li>
+                    <li><i class="fas fa-envelope"></i> info@sonnysayisolutions.co.ke</li>
                     <li><i class="fas fa-clock"></i> Mon-Fri: 8AM-5PM</li>
                 </ul>
             </div>
