Update Landing page

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="pricing-grid">
                 <div class="pricing-card fade-in">
                     <h3>Basic Website</h3>
-                    <div class="price"><span>From</span>18,000 <span>Kshs</span></div>
+                    <div class="price"><span>From</span>25,000 <span>Kshs</span></div>
                     <p>Perfect for startups and small businesses</p>
                     <ul>
                         <li><i class="fas fa-check"></i> 5 Custom Pages</li>
@@ -139,12 +139,12 @@
                         <li><i class="fas fa-check"></i> Basic SEO Setup</li>
                         <li><i class="fas fa-check"></i> CMS Integration</li>
                     </ul>
-                    <a href="#contact" class="btn">Get Started</a>
+                    <a href="contact.html" class="btn">Get Started</a>
                 </div>
                 <div class="pricing-card popular fade-in">
                     <div class="popular-badge">Most Popular</div>
                     <h3>Business Website</h3>
-                    <div class="price"> <span>From</span>25,000 <span>Kshs</span></div>
+                    <div class="price"> <span>From</span> 30,000 <span>Kshs</span></div>
                     <p>Ideal for growing businesses</p>
                     <ul>
                         <li><i class="fas fa-check"></i> Up to 10 Pages</li>
@@ -153,7 +153,7 @@
                         <li><i class="fas fa-check"></i> Contact Form with WhatsApp</li>
                         <li><i class="fas fa-check"></i> Google Maps Integration</li>
                     </ul>
-                    <a href="#contact" class="btn">Get Started</a>
+                    <a href="contact.html" class="btn">Get Started</a>
                 </div>
                 <div class="pricing-card fade-in">
                     <h3>E-commerce Website</h3>
@@ -174,12 +174,13 @@
                     <p>For unique business systems or tools</p>
                     <ul>
                         <li><i class="fas fa-check"></i> Tailored Features & Workflows</li>
+                        <li><i class="fas fa-check"></i> Custom Designs
                         <li><i class="fas fa-check"></i> Admin Dashboard</li>
                         <li><i class="fas fa-check"></i> Inventory Management</li>
                         <li><i class="fas fa-check"></i> User Authentication & Role</li>
                         <li><i class="fas fa-check"></i> Api Integration</li>
                     </ul>
-                    <a href="#contact" class="btn">Get Started</a>
+                    <a href="contact.html" class="btn">Get Started</a>
                 </div>
             </div>
         </div>
@@ -315,7 +316,7 @@
                             </div>
                             <div>
                                 <h4>Email</h4>
-                                <p>sonny.sayi@gmail.com</p>
+                                <p>info@sonnysayisolutions.co.ke</p>
                             </div>
                         </div>
                         <div class="contact-detail">
@@ -330,9 +331,9 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fas fa-envelope"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <!-- <a href="#"><i class="fab fa-github"></i></a> -->
+                        <a href="https://www.facebook.com/profile.php?id=61577290837456"><i class="fas fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/sonny-sayi-160835a7/"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="contact-form fade-in">
@@ -413,4 +414,5 @@
     </footer>
 <script src="script.js"></script>   
 </body>
+
 </html>
