Update Landing page

--- a/index.html
+++ b/index.html
@@ -120,71 +120,80 @@
     </section>
 
     <!-- Pricing Section -->
-    <section class="section pricing parallax" id="pricing">
-        <div class="overlay"></div>
-        <div class="content">
-            <div class="section-title">
-                <h2>Simple & Transparent Pricing</h2>
-                <p>Straightforward packages for all your digital needs</p>
-            </div>
-            <div class="pricing-grid">
-                <div class="pricing-card fade-in">
-                    <h3>Basic Website</h3>
-                    <div class="price"><span>From</span>25,000 <span>Kshs</span></div>
-                    <p>Perfect for startups and small businesses</p>
-                    <ul>
-                        <li><i class="fas fa-check"></i> 5 Custom Pages</li>
-                        <li><i class="fas fa-check"></i> Responsive Design</li>
-                        <li><i class="fas fa-check"></i> Contact Form</li>
-                        <li><i class="fas fa-check"></i> Basic SEO Setup</li>
-                        <li><i class="fas fa-check"></i> CMS Integration</li>
-                    </ul>
-                    <a href="contact.html" class="btn">Get Started</a>
-                </div>
-                <div class="pricing-card popular fade-in">
-                    <div class="popular-badge">Most Popular</div>
-                    <h3>Business Website</h3>
-                    <div class="price"> <span>From</span> 30,000 <span>Kshs</span></div>
-                    <p>Ideal for growing businesses</p>
-                    <ul>
-                        <li><i class="fas fa-check"></i> Up to 10 Pages</li>
-                        <li><i class="fas fa-check"></i> Custom Design</li>
-                        <li><i class="fas fa-check"></i> SEO Optimization</li>
-                        <li><i class="fas fa-check"></i> Contact Form with WhatsApp</li>
-                        <li><i class="fas fa-check"></i> Google Maps Integration</li>
-                    </ul>
-                    <a href="contact.html" class="btn">Get Started</a>
-                </div>
-                <div class="pricing-card fade-in">
-                    <h3>E-commerce Website</h3>
-                    <div class="price"> <span> From</span> 60,000 <span>Kshs</span></div>
-                    <p>For online stores and product sales</p>
-                    <ul>
-                        <li><i class="fas fa-check"></i> Up to 50 Products</li>
-                        <li><i class="fas fa-check"></i> Secure Payment Gateway</li>
-                        <li><i class="fas fa-check"></i> Inventory Management</li>
-                        <li><i class="fas fa-check"></i> Customer Accounts</li>
-                        <li><i class="fas fa-check"></i> Order Tracking</li>
-                    </ul>
-                    <a href="#contact" class="btn">Get Started</a>
-                </div>
-                  <div class="pricing-card fade-in">
-                    <h3>Custom Web Appliations</h3>
-                    <div class="price"> <span> From</span>80,000 <span>Kshs</span></div>
-                    <p>For unique business systems or tools</p>
-                    <ul>
-                        <li><i class="fas fa-check"></i> Tailored Features & Workflows</li>
-                        <li><i class="fas fa-check"></i> Custom Designs
-                        <li><i class="fas fa-check"></i> Admin Dashboard</li>
-                        <li><i class="fas fa-check"></i> Inventory Management</li>
-                        <li><i class="fas fa-check"></i> User Authentication & Role</li>
-                        <li><i class="fas fa-check"></i> Api Integration</li>
-                    </ul>
-                    <a href="contact.html" class="btn">Get Started</a>
-                </div>
-            </div>
+<section class="section pricing parallax" id="pricing">
+    <div class="overlay"></div>
+    <div class="content">
+        <div class="section-title">
+            <h2>Simple & Transparent Pricing</h2>
+            <p>Straightforward packages for all your digital needs</p>
         </div>
-    </section>
+        <div class="pricing-grid">
+
+            <!-- Basic Website -->
+            <div class="pricing-card fade-in">
+                <h3>Basic Website</h3>
+                <div class="price"><span>From</span> 40,000 <span>Kshs</span></div>
+                <p>Perfect for startups and small businesses</p>
+                <ul>
+                    <li><i class="fas fa-check"></i> 5 Custom Pages</li>
+                    <li><i class="fas fa-check"></i> Responsive Design</li>
+                    <li><i class="fas fa-check"></i> Contact Form</li>
+                    <li><i class="fas fa-check"></i> Basic SEO Setup</li>
+                    <li><i class="fas fa-check"></i> CMS Integration</li>
+                </ul>
+                <a href="contact.html" class="btn">Get Started</a>
+            </div>
+
+            <!-- Business Website -->
+            <div class="pricing-card popular fade-in">
+                <div class="popular-badge">Most Popular</div>
+                <h3>Business Website</h3>
+                <div class="price"> <span>From</span> 60,000 <span>Kshs</span></div>
+                <p>Ideal for growing businesses</p>
+                <ul>
+                    <li><i class="fas fa-check"></i> Up to 10 Pages</li>
+                    <li><i class="fas fa-check"></i> Custom Design</li>
+                    <li><i class="fas fa-check"></i> SEO Optimization</li>
+                    <li><i class="fas fa-check"></i> Contact Form with WhatsApp</li>
+                    <li><i class="fas fa-check"></i> Google Maps Integration</li>
+                </ul>
+                <a href="contact.html" class="btn">Get Started</a>
+            </div>
+
+            <!-- E-commerce Website -->
+            <div class="pricing-card fade-in">
+                <h3>E-commerce Website</h3>
+                <div class="price"> <span>From</span> 100,000 <span>Kshs</span></div>
+                <p>For online stores and product sales</p>
+                <ul>
+                    <li><i class="fas fa-check"></i> Up to 200 Products</li>
+                    <li><i class="fas fa-check"></i> Secure Payment Gateway</li>
+                    <li><i class="fas fa-check"></i> Inventory Management</li>
+                    <li><i class="fas fa-check"></i> Customer Accounts</li>
+                    <li><i class="fas fa-check"></i> Order Tracking</li>
+                </ul>
+                <a href="contact.html" class="btn">Get Started</a>
+            </div>
+
+            <!-- Custom Web Applications -->
+            <div class="pricing-card fade-in">
+                <h3>Custom Web Applications</h3>
+                <div class="price"> <span>From</span> 150,000 <span>Kshs</span></div>
+                <p>For unique business systems or tools</p>
+                <ul>
+                    <li><i class="fas fa-check"></i> Tailored Features & Workflows</li>
+                    <li><i class="fas fa-check"></i> Custom Designs</li>
+                    <li><i class="fas fa-check"></i> Admin Dashboard</li>
+                    <li><i class="fas fa-check"></i> Inventory Management</li>
+                    <li><i class="fas fa-check"></i> User Authentication & Roles</li>
+                    <li><i class="fas fa-check"></i> API Integration</li>
+                </ul>
+                <a href="contact.html" class="btn">Get Started</a>
+            </div>
+
+        </div>
+    </div>
+</section>
 
     <!-- Portfolio Section -->
     <section class="section portfolio parallax" id="portfolio">
@@ -416,3 +425,4 @@
 </body>
 
 </html>
+
