Update Landing page

--- a/index.html
+++ b/index.html
@@ -197,43 +197,82 @@
         </div>
     </section>
 
-    <!-- Portfolio Section -->
-    <section class="section portfolio parallax" id="portfolio">
-        <div class="overlay"></div>
-        <div class="content">
-            <div class="section-title">
-                <h2>Client Success Stories</h2>
-                <p>Real solutions for real Kenyan businesses—built for performance, not just appearance</p>
+    <!-- Pricing Section -->
+<section class="section pricing parallax" id="pricing">
+    <div class="overlay"></div>
+    <div class="content">
+        <div class="section-title">
+            <h2>Clear, Justified Pricing</h2>
+            <p>Every shilling reflects real value: expertise, education, long-term reliability, and business impact.</p>
+        </div>
+        <div class="pricing-grid">
+            <!-- Basic Website -->
+            <div class="pricing-card fade-in">
+                <h3>Basic Website</h3>
+                <div class="price"><span>From</span> 45,000 <span>Kshs</span></div>
+                <p>Your essential online presence—fast, mobile-ready, and lead-generating.</p>
+                <ul>
+                    <li><i class="fas fa-check"></i> <strong>7 purpose-built pages</strong> — clear messaging that converts visitors in under 10 seconds.</li>
+                    <li><i class="fas fa-check"></i> <strong>Mobile-first architecture</strong> — optimized for Kenyan 4G; loads in under 2 seconds.</li>
+                    <li><i class="fas fa-check"></i> <strong>Always-on lead capture</strong> — contact form + WhatsApp button to never miss an inquiry.</li>
+                    <li><i class="fas fa-check"></i> <strong>Professional email setup</strong> — project credibility with your@business.co.ke.</li>
+                    <li><i class="fas fa-check"></i> <strong>Foundational SEO</strong> — metadata, clean URLs, and sitemap so Google finds you.</li>
+                    <li><i class="fas fa-check"></i> <strong>Simple self-management</strong> — update content anytime, no developer fees.</li>
+                </ul>
+                <a href="contact.html" class="btn">Get Started</a>
             </div>
-            <div class="portfolio-grid">
-                <div class="portfolio-card fade-in">
-                    <img src="assets/pasi dental.png" alt="Pasi Dental Care Website - Nairobi" class="portfolio-img">
-                    <div class="portfolio-overlay">
-                        <h3>Pasi Dental Clinic</h3>
-                        <p>Modern, anxiety-free dental website with appointment system and SEO-optimized service pages.</p>
-                        <a href="https://pasidentalcare.co.ke" target="_blank" class="portfolio-link">View Project <i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-                <div class="portfolio-card fade-in">
-                    <img src="assets/geotronics.PNG" alt="Geotronics Engineering Website - Borehole Drilling Kenya" class="portfolio-img">
-                    <div class="portfolio-overlay">
-                        <h3>Geotronics Engineering</h3>
-                        <p>Corporate site showcasing borehole technology, service areas, and client trust—built for lead generation.</p>
-                        <a href="https://geotronics.co.ke/" target="_blank" class="portfolio-link">View Project <i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-                <div class="portfolio-card fade-in">
-                    <img src="assets/eyeonproperty.png" alt="Eye On Property & Design Website - Mombasa" class="portfolio-img">
-                    <div class="portfolio-overlay">
-                        <h3>Eye On Property</h3>
-                        <p>Integrated real estate and interior design platform—showcasing listings, projects, and construction tech.</p>
-                        <a href="https://eyeonproperty.co.ke" target="_blank" class="portfolio-link">View Project <i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
+
+            <!-- Business Website -->
+            <div class="pricing-card popular fade-in">
+                <div class="popular-badge">Most Popular</div>
+                <h3>Business Website</h3>
+                <div class="price"><span>From</span> 60,000 <span>Kshs</span></div>
+                <p>For businesses ready to stand out, rank higher, and convert more visitors.</p>
+                <ul>
+                    <li><i class="fas fa-check"></i> <strong>Up to 15 custom pages</strong> — showcase services, portfolio, FAQs, and location confidently.</li>
+                    <li><i class="fas fa-check"></i> <strong>Brand-aligned design</strong> — your colors, fonts, and voice applied consistently.</li>
+                    <li><i class="fas fa-check"></i> <strong>Advanced local SEO</strong> — optimized for “web designer in Nairobi” searches.</li>
+                    <li><i class="fas fa-check"></i> <strong>Dual communication</strong> — WhatsApp + contact form for maximum reach.</li>
+                    <li><i class="fas fa-check"></i> <strong>Google Maps & social proof</strong> — build trust with physical presence.</li>
+                    <li><i class="fas fa-check"></i> <strong>Built to last</strong> — no bloated templates; clean, secure, maintainable code.</li>
+                </ul>
+                <a href="contact.html" class="btn">Get Started</a>
+            </div>
+
+            <!-- E-commerce Website -->
+            <div class="pricing-card fade-in">
+                <h3>E-commerce Website</h3>
+                <div class="price"><span>From</span> 120,000 <span>Kshs</span></div>
+                <p>Turn your product catalog into a 24/7 sales engine—secure, local, and scalable.</p>
+                <ul>
+                    <li><i class="fas fa-check"></i> <strong>200+ product listings</strong> — manage inventory, pricing, and images in one dashboard.</li>
+                    <li><i class="fas fa-check"></i> <strong>M-Pesa + card payments</strong> — trusted checkout Kenyans recognize.</li>
+                    <li><i class="fas fa-check"></i> <strong>Live stock tracking</strong> — prevent overselling; sync warehouse & store.</li>
+                    <li><i class="fas fa-check"></i> <strong>Customer accounts</strong> — faster reorders, saved preferences, loyalty building.</li>
+                    <li><i class="fas fa-check"></i> <strong>Order management</strong> — process and update orders from your phone.</li>
+                    <li><i class="fas fa-check"></i> <strong>No monthly fees</strong> — unlike Shopify, you own your store outright.</li>
+                </ul>
+                <a href="contact.html" class="btn">Get Started</a>
+            </div>
+
+            <!-- Custom Web Applications -->
+            <div class="pricing-card fade-in">
+                <h3>Custom Web Applications</h3>
+                <div class="price"><span>From</span> 180,000 <span>Kshs</span></div>
+                <p>Digital systems that mirror your workflow—built for efficiency, not complexity.</p>
+                <ul>
+                    <li><i class="fas fa-check"></i> <strong>Tailored to your operations</strong> — lead tracking, property management, or shop inventory.</li>
+                    <li><i class="fas fa-check"></i> <strong>Role-based dashboards</strong> — admins, staff, and managers see only what they need.</li>
+                    <li><i class="fas fa-check"></i> <strong>Secure authentication</strong> — Firebase-backed login for sensitive data.</li>
+                    <li><i class="fas fa-check"></i> <strong>Real-time reporting</strong> — track performance and bottlenecks daily.</li>
+                    <li><i class="fas fa-check"></i> <strong>API-ready architecture</strong> — integrate email, SMS, or future tools.</li>
+                    <li><i class="fas fa-check"></i> <strong>Designed for Kenya</strong> — low-bandwidth friendly, .co.ke compatible.</li>
+                </ul>
+                <a href="contact.html" class="btn">Get Started</a>
             </div>
         </div>
-    </section>
-
+    </div>
+</section>
     <!-- FAQ Section -->
     <section class="section faq parallax" id="faq">
         <div class="overlay"></div>
@@ -424,3 +463,4 @@
     <script src="script.js"></script>   
 </body>
 </html>
+
