--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p>No business is too small for the web. A modern website builds trust, runs 24/7, and turns visitors into customers.</p>
             <p>Discover the Sonny Sayi I.T. Solutions portfolio, featuring websites, branding, and IT projects created to help businesses thrive online.</p>
             <div class="hero-btns">
-                <a href="#portfolio" class="btn">View Our Work</a>
+                <a href="service.html" class="btn">View Our Services</a>
                 <a href="#pricing" class="btn btn-outline">See Pricing</a>
             </div>
         </div>
